<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar_fm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tv_movie_tfav"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toTopOf="@+id/rv_movies"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="175dp">

                <ImageView
                        android:id="@+id/iv_fav_poster"
                        android:layout_width="@dimen/poster_size_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/poster_fav"
                        android:src="@drawable/image_logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                        android:id="@+id/tv_fav_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/favorite_movie_title"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.484"
                        app:layout_constraintStart_toEndOf="@+id/iv_fav_poster"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                        android:id="@+id/tv_title_itemf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="31dp"
                        android:text="@string/title_msg"
                        app:layout_constraintBottom_toTopOf="@+id/rb_show_stars"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_fav_poster"
                        app:layout_constraintTop_toBottomOf="@+id/tv_fav_title" />

                <RatingBar
                        android:id="@+id/rb_show_stars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:isIndicator="true"
                        android:scaleX="0.4"
                        android:scaleY="0.4"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_fav_poster"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_fav_poster" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!--android:isIndicator allows Rating Bar to be unchangeable, only displays information-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_add_24" />


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_rv_movies"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>